--- a/src/css/countrystat-ui.scss
+++ b/src/css/countrystat-ui.scss
@@ -18,11 +18,10 @@
 @import "themes/side-menu";
 @import 'themes/theme';
 @import 'themes/typo3-styling';
-@import 'themes/unified-style';
+//@import 'themes/unified-style';
 
-/* Analysis */
-@import 'utils/fx-functions';
-@import 'utils/fx-mixins';
-@import 'utils/fx-utils';
+
+
+
 
 
