--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -1,3 +1,153 @@
+/*  iso-name,
+    country-welcome,
+    background-color,
+    country-welcome-pointer (lighter color of country-welcome)
+
+*/
+
+
+
+
+$countries: (
+    ("cog", "#e4c779", "#2b686a", "#f5e5bb"),
+    ("mdg", "red", "#2b686a", "#f5e5bb")
+);
+
+
+@each $country in $countries{
+
+  body.#{nth($country, 1)} {
+
+
+    //// Start of theme builder
+
+    .country-welcome{
+      background-color:#{nth($country, 2)};
+
+    }
+
+    .country-details {
+      background-image: url("./#{nth($country, 1)}/#{nth($country, 1)}-home.jpg");
+    }
+
+
+    .home-content{
+
+    background-color: #{nth($country, 3)};
+
+
+    .home-detail-pointer{
+
+      background-color: #{nth($country, 4)};
+
+      &:before{
+
+        border-color: transparent transparent transparent #{nth($country, 4)};
+      }
+
+
+    }
+
+    .country-details{
+
+
+      .home-stats-footer{
+        height: 100px;
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 15px 15px 15px 35px;
+        background-color: $home-stats-bg;
+
+
+
+        h3{
+          font-weight: 100;
+          font-size: 20px;
+          color: white;
+          margin: 0;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        p.subtitle{
+          font-weight: 500;
+          font-size: 10px;
+          color: white;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+
+        }
+
+        .col-xs-2{
+          padding-top: 12px;
+          position: relative;
+
+
+          &:before{
+            content: '';
+            position: absolute;
+            top: 50%;
+            @include fx-transfor-me(translateY(-50%));
+            background-image: url(img/arrow-right.svg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 8px;
+            height: 20px;
+            right: 10px;
+          }
+
+
+
+
+
+        }
+
+        .pie-holder{
+          position: relative;
+          padding-left: 90px;
+          padding-top: 12px;
+          &:before {
+            display: none;
+          }
+
+        }
+
+        .afg-home-stats{
+          height: 65px;
+          width: 65px;
+          position: absolute !important;
+          left: 10px;
+          top: 0;
+        }
+
+
+
+      }
+
+
+    }
+
+
+  }
+
+
+
+
+
+
+
+    // End of theme builder
+
+
+  }
+
+
+}
+
 
 
 // Standard Fenix Theme
