--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -17,8 +17,10 @@
 
 $countries: (
     (COG, #db514b, #e4c779, #2b686a, #f5e5bb,#e0f1ee,#abb9c4, #b8d7da, #869c93,#97bead,50% 76%,#29403e, #305a52, #3a7f70),
-    (MDG, #db514b, #e4c779, #2b686a, #f5e5bb,#e0f1ee,#abb9c4, #b8d7da, #869c93,     #29403e, #305a52, #3a7f70, #3a7f70, #3a7f70, #3a7f70, #3a7f70, #3a7f70, #3a7f70, #3a7f70, #3a7f70, #3a7f70, #3a7f70)
+    (MDG, #db514b, #df6660, #eca3a0, #f5e5bb,#e0f1ee,#abb9c4, #b8d7da, #869c93,#97bead,63% 94%,#29403e, #305a52, #3a7f70)
 );
+
+
 
 
 @each $country in $countries{
