--- a/src/css/countrystat-ui.css
+++ b/src/css/countrystat-ui.css
@@ -6551,5 +6551,128 @@ body[data-country='MDG'] .pulse-button {
 @keyframes pulse {
   to {
     box-shadow: 0 0 0 45px rgba(219, 81, 75, 0); } }
+body[data-country='CMR'] .country-welcome {
+  background-color: #f09752; }
+body[data-country='CMR'] .country-details {
+  background-image: url("http://fenixrepo.fao.org/countrystat/assets/CMR/CMR-home.jpg"); }
+body[data-country='CMR'] .home-content {
+  background-color: #2f5674; }
+  body[data-country='CMR'] .home-content .home-detail-pointer {
+    background-color: #f8cba9; }
+    body[data-country='CMR'] .home-content .home-detail-pointer:before {
+      border-color: transparent transparent transparent #f8cba9; }
+body[data-country='CMR'] .country-details .home-stats-footer {
+  background-color: rgba(47, 86, 116, 0.5); }
+body[data-country='CMR'] .partners-holder {
+  background-color: #e0f1ee; }
+  body[data-country='CMR'] .partners-holder h4 {
+    color: #abb9c4; }
+body[data-country='CMR'] .home-tile.aims ol li:before {
+  color: #b8d7da; }
+body[data-country='CMR'] .home-tile.gray {
+  background-color: #869c93; }
+body[data-country='CMR'] .home-tile.map {
+  background-color: #97bead;
+  background-image: url("http://fenixrepo.fao.org/countrystat/assets/CMR/CMR-map.svg"); }
+  body[data-country='CMR'] .home-tile.map:hover {
+    background-position: 50% 76%; }
+  body[data-country='CMR'] .home-tile.map .afg-title {
+    background-color: #97bead; }
+body[data-country='CMR'] #sidebar-wrapper {
+  background-color: #2d3e46; }
+  body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li {
+    background-color: #345962; }
+    body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li.active a {
+      background-color: #345962; }
+      body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li.active a:before {
+        background-color: #f07f52; }
+      body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li.active a:hover, body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li.active a:active, body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li.active a:focus, body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li.active a:visited {
+        background-color: #345962; }
+    body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li a:hover, body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li a:active, body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li a:focus, body[data-country='CMR'] #sidebar-wrapper .sidebar-nav li a:visited {
+      background-color: #345962; }
+body[data-country='CMR'] .fx-text-primary-color {
+  color: #f07f52; }
+body[data-country='CMR'] .fx-background-color-primary-color {
+  background-color: #f07f52; }
+body[data-country='CMR'] .fx-button-primary-color {
+  color: white;
+  border-color: #ec5c23;
+  background-color: #f07f52; }
+  body[data-country='CMR'] .fx-button-primary-color:hover {
+    color: white;
+    border-color: #ec5c23;
+    background-color: #ee6e3b; }
+  body[data-country='CMR'] .fx-button-primary-color:focus {
+    color: white;
+    border-color: #ca4612;
+    background-color: #e24e14; }
+body[data-country='CMR'] .jstree-default .jstree-wholerow-clicked {
+  background: none;
+  background-color: white; }
+body[data-country='CMR'] .jstree-default .jstree-wholerow-hovered {
+  background: none;
+  background-color: white; }
+body[data-country='CMR'] .jstree-default .jstree-disabled.jstree-clicked {
+  background: none;
+  background-color: white; }
+body[data-country='CMR'] .irs-bar {
+  border-top: 1px solid #f07f52;
+  border-bottom: 1px solid #f07f52; }
+body[data-country='CMR'] .irs-bar-edge {
+  border: 1px solid #f07f52; }
+body[data-country='CMR'] .irs-bar, body[data-country='CMR'] .irs-bar-edge {
+  background: #f07f52; }
+body[data-country='CMR'] .irs-from, body[data-country='CMR'] .irs-to, body[data-country='CMR'] .irs-single {
+  color: #f07f52; }
+body[data-country='CMR'] [data-selector-time] .day.active {
+  background-color: #f07f52; }
+  body[data-country='CMR'] [data-selector-time] .day.active:hover {
+    background-color: #c19381; }
+body[data-country='CMR'] [data-selector-time] .day.today:before {
+  border-bottom-color: #f07f52; }
+body[data-country='CMR'] [data-selector-time] .month.active {
+  background-color: #f07f52; }
+body[data-country='CMR'] [data-selector-time] .year.active {
+  background-color: #f07f52; }
+body[data-country='CMR'] [data-selector-time] .fx-time-addon {
+  color: #f07f52; }
+body[data-country='CMR'] [data-selector-time] [data-action="incrementHours"], body[data-country='CMR'] [data-selector-time] [data-action="decrementHours"], body[data-country='CMR'] [data-selector-time] [data-action="incrementMinutes"], body[data-country='CMR'] [data-selector-time] [data-action="decrementMinutes"] {
+  color: #f07f52; }
+body[data-country='CMR'] [data-selector-time] [data-action="togglePicker"] span {
+  color: #f07f52; }
+body[data-country='CMR'] .cat-toolbar button:hover {
+  color: #f07f52; }
+body[data-country='CMR'] .bootstrap-table .pagination > li > a, body[data-country='CMR'] .bootstrap-table .pagination > li > span {
+  color: #f07f52; }
+body[data-country='CMR'] .bootstrap-table .pagination > .active > a, body[data-country='CMR'] .bootstrap-table .pagination > .active > a:hover, body[data-country='CMR'] .bootstrap-table .pagination > .active > a:focus, body[data-country='CMR'] .bootstrap-table .pagination > .active > span, body[data-country='CMR'] .bootstrap-table .pagination > .active > span:hover, body[data-country='CMR'] .bootstrap-table .pagination > .active > span:focus {
+  color: white;
+  background-color: #f07f52;
+  border-color: #f07f52; }
+body[data-country='CMR'] .vb-toolbar button:hover {
+  color: #f07f52; }
+body[data-country='CMR'] .swiper-button-prev {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'#f07f52'%2F%3E%3C%2Fsvg%3E"); }
+body[data-country='CMR'] .swiper-button-next {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'#f07f52'%2F%3E%3C%2Fsvg%3E"); }
+body[data-country='CMR'] .swiper-pagination-bullet-active {
+  background: #f07f52; }
+body[data-country='CMR'] .gt-row-over td {
+  border-bottom-color: #f07f52; }
+body[data-country='CMR'] .fm-controller-box-item .ui-widget-header {
+  background-color: #f07f52; }
+body[data-country='CMR'] .pulse-button {
+  box-shadow: 0 0 0 0 rgba(240, 127, 82, 0.7); }
+@-webkit-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
+@-moz-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
+@-ms-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
 
 /*# sourceMappingURL=countrystat-ui.css.map */
