--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -17,7 +17,8 @@
 
 $countries: (
     (COG, #db514b, #e4c779, #2b686a, #f5e5bb,#e0f1ee,#abb9c4, #b8d7da, #869c93,#97bead,50% 76%,#29403e, #305a52, #3a7f70),
-    (MDG, #db514b, #df6660, #2b686a, #eca3a0,#e0f1ee,#abb9c4, #b8d7da, #869c93,#97bead,63% 94%,#29403e, #305a52, #3a7f70)
+    (MDG, #db514b, #df6660, #2b686a, #eca3a0,#e0f1ee,#abb9c4, #b8d7da, #869c93,#97bead,63% 94%,#29403e, #305a52, #3a7f70),
+    (CMR, #f07f52, #f09752, #2f5674, #f8cba9,#e0f1ee,#abb9c4, #b8d7da, #869c93,#97bead,50% 76%,#2d3e46, #345962, #345962)
 );
 
 
