--- a/src/css/countrystat-ui.scss
+++ b/src/css/countrystat-ui.scss
@@ -1,3 +1,17 @@
+/* Default */
+
+//@media (min-width: 768px) and (max-width: 991px) {
+//
+//}
+//
+//@media (min-width: 992px) and (max-width: 1199px) {
+//
+//}
+//
+//@media (min-width: 1200px) {
+//
+//}
+
 @import 'utils/fx-utils';
 
 @import 'themes/variables';
