--- a/src/css/themes/_theme.scss
+++ b/src/css/themes/_theme.scss
@@ -233,7 +233,8 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
     font-size: 40px;
     padding: 0;
 
-    &:active, &:active:focus, &:focus, &:active:hover, &:hover{
+
+    &.active, &:active, &:hover, &:active:hover, &:active:focus, &:focus{
       @include fx-noshadow;
       border-color: transparent;
       background-color: transparent;
